# stm32-ai-workflow

./: .gitignore  MYREADME.md  environment.yaml  evaluation_metrics.md  network.c  network.h  network_config.h  network_data.c  network_data.h  network_data_params.h  pyproject.toml  requirements.txt  verify_audio_adapter.py  verify_dataset_download.py
analisiAI/code_resnet/: network.c  network.h  network_c_info.json  network_config.h  network_data.c  network_data.h  network_data_params.h  network_generate_report.txt
analisiAI/network_validate_report.txt/: network_c_info.json  network_val_c_inputs_1.csv  network_val_c_outputs_1.csv  network_val_c_outputs_1.npy  network_val_io.npz  network_val_m_inputs_1.csv  network_val_m_inputs_1.npy  network_val_m_outputs_1.csv  network_val_m_outputs_1.npy  network_validate_report.txt
analisiAI/report_analyze/: network_analyze_report.txt  network_c_info.json
analisiAI/report_resnet/: network_analyze_report.txt  network_c_info.json
chroma_customization_docs/e4717474-3fe2-4e8a-a19a-eba9ec400940/: index_metadata.pickle
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/components/: chat-sidebar.tsx
src/assistant/: configuration.py  graph.py  state.py  workflow1_firmware.py  workflow2_ai.py  workflow3_integration.py  workflow4_web_search.py  workflow5_customization.py  workflow6_synthetic_data.py  workflow7_dataset.py
st_ai_ws/generated_network/: network.c  network.h  network_config.h  network_data.c  network_data.h  network_data_params.h
