[project]
name = "ollama-deep-researcher"
version = "0.0.1"
description = "Lightweight web research and summarization assistant."
authors = [
    { name = "Lance Martin" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.55",
    "langchain-community>=0.3.9",
    "langchain-core>=0.3.50",
    "langchain>=0.3.22",
    "langsmith>=0.3.33",
    "langchain-ollama>=0.2.1",
    "copilotkit>=0.1.34",
    "tavily-python>=0.5.0",
    "agno>=1.2.7",
    "googlesearch-python>=1.3.0",
    "duckduckgo_search>=8.0.0",  # fixed to latest valid version
    "beautifulsoup4>=4.13.3",
    "free_proxy>=1.1.3",
    "fake-useragent>=2.1.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "httpx>=0.27.2",
    "sse-starlette>=2.1.3",
    "pydantic>=2.11.2",
    "python-dotenv>=1.1.0",
    "pycountry>=24.6.1",
    "scholarly>=1.7.11",
    "semanticscholar>=0.10.0",
    "e2b>=1.3.5",
    "e2b-code-interpreter>=1.2.1",
    "openevals>=0.0.19",
    "chromadb>=1.0.9",
    "langchain_nomic>=0.3.0",
    "gpt4all>=2.8.2",
    "sentence-transformers>=4.1.0",
    


]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["assistant"]

[tool.setuptools.package-dir]
"assistant" = "src/assistant"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
